--- a/src/assets/css/partials/_variables.scss
+++ b/src/assets/css/partials/_variables.scss
@@ -22,5 +22,5 @@ $text-font: 'Ubuntu Mono', sans;
 $header-font: 'Work Sans', sans;
 
 // FONT SIZES
-$text-mobile: 16px;
-$text-tablet: 24px;
+$text-mobile: 1em;
+$text-tablet: 1.5em;
